Fix the alignment from the Doc-control
-fix by using the display flex
-delete the margin left and right
-change the width of the element

--- a/client/src/pages/DocControl/DocControlList.scss
+++ b/client/src/pages/DocControl/DocControlList.scss
@@ -1,19 +1,16 @@
 .docControlHeader {
+  width: calc(100% - 416px);
   display: flex;
-  gap: -1rem;
-}
-
-.docControlHeader h3 {
-  margin-left: 250px;
-  margin: 20px -120px 10px 230px;
+  margin-left: 416px;
+  gap: 112px;
 }
 
 .docControlWrapper {
   display: flex;
-  flex-direction: column;
 }
 
 .documentTitle {
+  width: calc(100% - 15px);
   display: flex;
   align-items: center;
   padding: 15px;
@@ -64,15 +61,15 @@
 }
 
 .docControlList {
-  height: 42.5rem;
+  height: calc(100% - 162px);
   //   width: 1400px;
   width: 100%;
-  border-radius: 5px;
-  box-shadow: 0.3px 2px 3px 5px rgba(200, 200, 200, 0.188);
 
   .table {
-    padding: 1px;
-
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     .documentTitle {
       display: flex;
     }
@@ -81,7 +78,9 @@
       background-color: #ffffff;
       padding: 20px;
       box-shadow: 0.3px 2px 3px 5px rgba(134, 133, 133, 0.188);
-      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
 
       .item-id {
         color: #333;
@@ -118,69 +117,65 @@
 
       .item-name {
         color: #555;
-        margin-right: 200px;
       }
 
       .item_modified {
-        margin-right: 180px;
         color: #555;
       }
 
       .issued_date {
         color: #555;
-        margin-right: 170px;
       }
 
       .additional_info {
-        margin-left: 2rem;
-        margin-right: 10rem;
         padding: 20px 10px;
         border-radius: 100%;
         border: 2px solid #00dd73;
       }
 
       .partiesicon {
-        margin-left: -10px;
-        margin-right: 30px;
-        height: 28px;
-        width: 28px;
-        margin-bottom: -10px;
+        height: 24px;
+        width: 24px;
       }
 
       .transpartiesicon {
-        margin-left: -35px;
-        margin-right: 30px;
-        margin-bottom: -10px;
-        height: 28px;
-        width: 28px;
-        opacity: 0;
-        user-drag: none;
-        -webkit-user-drag: none;
-        user-select: none;
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        -ms-user-select: none;
+        width: 24px;
+        height: 24px;
       }
 
       .reviewicon {
-        height: 28px;
-        width: 28px;
-        margin-bottom: -8px;
+        height: 24px;
+        width: 24px;
+      }
+
+      .send-icon {
+        height: 26px;
+        width: 26px;
+        object-fit: cover;
       }
 
       .sendicon {
-        margin-left: 20px;
-        height: 25px;
-        width: 25px;
-        margin-bottom: -5px;
+        width: 24px;
+        height: 24px;
       }
-
       .transsendicon {
-        margin-left: 20px;
-        height: 25px;
-        width: 25px;
-        margin-bottom: -5px;
+        height: 24px;
+        width: 24px;
+        object-fit: cover;
       }
     }
   }
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.item-id {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
